--- a/Pipfile
+++ b/Pipfile
@@ -4,14 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
 psycopg2-binary = "*"
 django-cors-headers = "*"
 djangorestframework-simplejwt = "*"
 djangorestframework = "*"
 django-environ = "*"
 dj-database-url = "*"
-
+gunicorn = "*"
+django = "*"
 
 [dev-packages]
 
